# deprecated-api-versions-policy

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml  questions-ui.yml  renovate.json  updatecli-manifest.yaml  versions.yaml
.github/: release-drafter.yml
.github/workflows/: check-versions-updates-cron.yml  open-release-pr.yml  release-tag.yml  release.yml  test.yml
crates/policy-metadata-helper/: Cargo.toml
crates/policy-metadata-helper/src/: cli.rs  main.rs  policy_metadata.rs
crates/policy-version-helper/: .gitignore  Cargo.toml
crates/policy-version-helper/src/: cli.rs  main.rs
crates/versions/: Cargo.toml
crates/versions/src/: deprecations.rs  lib.rs  serde_helpers.rs
src/: helpers.rs  lib.rs  settings.rs  version.rs
test_data/: deprecated_ingress.yaml  ingress_creation.json  valid_ingress.yaml
