[package]
name = "deprecated-api-versions"
version = "1.0.5"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/versions", "crates/policy-metadata-helper"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
kubewarden-policy-sdk = { version = "0.14.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
versions = { path = "crates/versions" }
